--- a/file_management/demo.org
+++ b/file_management/demo.org
@@ -3,11 +3,11 @@ A brief demo file to test GIF performance on Github:
 
 First, we're adding date- and time-stamps to a set of files:
 
-file:date2name.gif
+[[file:date2name.gif]]
 
 We then add more information to the file names:
 
-file:appendfilename.gif
+[[file:appendfilename.gif]]
 
 Adding keywords or tags to file names:
 
